I made some changes in index.html and style.css and I add pictures

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATLAS MMORPG</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <div class="container">
@@ -13,7 +14,7 @@
                 <img src="ATLASLOGO2.png" alt="ATLAS logo">
             </div>
             <div class="login">
-                <!--login circle-->
+                <i class='bx bxs-user-circle' style='color:#387b66'></i>
             </div>
         </header>
 
@@ -22,12 +23,21 @@
         </section>
 
         <section class="item-section">
-            <!--image item-->
+            <div class="recent-items">
+                <img src="poison1.png" alt="Item 1">
+                <img src="poison2.png" alt="Item 2">
+                <img src="poison3.png" alt="Item 3">
+            </div>
+
+            <div class="timer">
+                Recently Added Items! <span>24:00:00</span>
+            </div>
+            <button class="purchase-btn">PURCHASE</button>
         </section>
 
         <section class="bundle-section">
             <div class="bundle">
-                <!--Weapon pictures-->
+                <h1>BUNDLE</h1>
             </div>
         </section>
     </div>
