--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATLAS MMORPG</title>
     <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <div class="container">
@@ -13,25 +12,31 @@
             <div class="logo">
                 <img src="ATLASLOGO2.png" alt="ATLAS logo">
             </div>
-            <div class="login">
-                <i class='bx bxs-user-circle' style='color:#387b66'></i>
+
+            <div class="user-icon">
+                <img src="user-icon.png" alt="User Icon">
             </div>
         </header>
 
         <section class="search-bar">
             <input type="text" placeholder="SEARCH">
+
+            <button type="button">
+                <img src="search-icon.png" alt="Search Icon">
+            </button>
         </section>
 
         <section class="item-section">
             <div class="recent-items">
-                <img src="poison1.png" alt="Item 1">
-                <img src="poison2.png" alt="Item 2">
-                <img src="poison3.png" alt="Item 3">
+                <img src="poison1.png" class="item-1" alt="Item 1">
+                <img src="poison2.png" class="item-2" alt="Item 2">
+                <img src="poison3.png" class="item-3" alt="Item 3">
             </div>
 
             <div class="timer">
                 Recently Added Items! <span>24:00:00</span>
             </div>
+
             <button class="purchase-btn">PURCHASE</button>
         </section>
 
