--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="ATLASLOGO2.png" alt="ATLAS logo">
+                <img src="images/ATLASLOGO2.png" alt="ATLAS logo">
             </div>
 
             <div class="user-icon">
-                <img src="user-icon.png" alt="User Icon">
+                <img src="images/user-icon.png" alt="User Icon">
             </div>
         </header>
 
@@ -22,15 +22,15 @@
             <input type="text" placeholder="SEARCH">
 
             <button type="button">
-                <img src="search-icon.png" alt="Search Icon">
+                <img src="images/search-icon.png" alt="Search Icon">
             </button>
         </section>
 
         <section class="item-section">
             <div class="recent-items">
-                <img src="poison1.png" class="item-1" alt="Item 1">
-                <img src="poison2.png" class="item-2" alt="Item 2">
-                <img src="poison3.png" class="item-3" alt="Item 3">
+                <img src="images/poison1.png" class="item-1" alt="Item 1">
+                <img src="images/poison2.png" class="item-2" alt="Item 2">
+                <img src="images/poison3.png" class="item-3" alt="Item 3">
             </div>
 
             <div class="timer">
