--- a/index.html
+++ b/index.html
@@ -9,42 +9,42 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">
-                <img src="images/ATLASLOGO2.png" alt="ATLAS logo">
+            <div class="login-register">
+                <a class="login" href="#">LOGIN</a>
+                <a class="register" href="#">REGISTER</a>
             </div>
 
-            <div class="user-icon">
-                <img src="images/user-icon.png" alt="User Icon">
+            <div class="logo">
+                <img src="images/ATLAS-LOGO.png" alt="ATLAS Logo">
+            </div>
+
+            <div class="navigation-bar">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">FORUM</a></li>
+                    <li><a href="#">STORE</a></li>
+                </ul>
+            </div>
+
+            <div class="box-container">
+                <div class="welcome-msg">
+                    <h1>WELCOME TO ATLAS!</h1>
+                </div>
+
+                <div class="search-bar">
+                    <input type="text" placeholder="SEARCH">
+                </div>
+            </div>
+
+            <div class="players-online">
+                <img src="images/multiple-users.png" alt="Multiple Users">
+                <p>PLAY.ATLASMMORPG.COM</p>
+                <p>1000 Players Online</p>
+                <span class="dot"></span>
             </div>
         </header>
 
-        <section class="search-bar">
-            <input type="text" placeholder="SEARCH">
 
-            <button type="button">
-                <img src="images/search-icon.png" alt="Search Icon">
-            </button>
-        </section>
-
-        <section class="item-section">
-            <div class="recent-items">
-                <img src="images/poison1.png" class="item-1" alt="Item 1">
-                <img src="images/poison2.png" class="item-2" alt="Item 2">
-                <img src="images/poison3.png" class="item-3" alt="Item 3">
-            </div>
-
-            <div class="timer">
-                Recently Added Items! <span>24:00:00</span>
-            </div>
-
-            <button class="purchase-btn">PURCHASE</button>
-        </section>
-
-        <section class="bundle-section">
-            <div class="bundle">
-                <h1>BUNDLE</h1>
-            </div>
-        </section>
     </div>
 </body>
 </html>
