--- a/index.html
+++ b/index.html
@@ -10,40 +10,39 @@
     <div class="container">
         <header>
             <div class="login-register">
-                <a class="login" href="#">LOGIN</a>
-                <a class="register" href="#">REGISTER</a>
-            </div>
-
-            <div class="logo">
-                <img src="images/ATLAS-LOGO.png" alt="ATLAS Logo">
-            </div>
-
-            <div class="navigation-bar">
                 <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">FORUM</a></li>
-                    <li><a href="#">STORE</a></li>
+                    <li><a class="login" href="#">LOGIN</a></li>
+                    <li><a class="register" href="#">REGISTER</a></li>
                 </ul>
             </div>
 
             <div class="box-container">
-                <div class="welcome-msg">
-                    <h1>WELCOME TO ATLAS!</h1>
+                <div class="navigation-bar">
+                    <ul>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">FORUM</a></li>
+                        <li><a href="#">STORE</a></li>
+                    </ul>
                 </div>
 
-                <div class="search-bar">
-                    <input type="text" placeholder="SEARCH">
+                <div class="bbx-container">
+                    <div class="welcome-msg">
+                        <h1>WELCOME TO ATLAS!</h1>
+                    </div>
+    
+                    <div class="search-bar">
+                        <input type="text" placeholder="SEARCH">
+                    </div>
                 </div>
-            </div>
-
-            <div class="players-online">
-                <img src="images/multiple-users.png" alt="Multiple Users">
-                <p>PLAY.ATLASMMORPG.COM</p>
-                <p>1000 Players Online</p>
-                <span class="dot"></span>
+    
+                <div class="players-online">
+                    <img src="images/multiple-users.png" alt="Multiple Users">
+                    <p>PLAY.ATLASMMORPG.COM</p>
+                    <p>1000 Players Online</p>
+                    <span class="dot"></span>
+                </div>
             </div>
         </header>
-
 
     </div>
 </body>
