--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
                         <h1>WELCOME TO ATLAS!</h1>
                     </div>
     
-                    <div class="search-bar">
-                        <input type="text" placeholder="SEARCH">
-                    </div>
+                    <form action="" class="search-bar">
+                        <input type="text" placeholder="FIND ITEM">
+
+                        <button class="btn-search">
+                            <img src="images/search-icon.png" alt="Search Icon">
+                        </button>
+                    </form>
                 </div>
     
                 <div class="players-online">
