--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
     
                 <div class="players-online">
                     <img src="images/multiple-users.png" alt="Multiple Users">
-                    <p>PLAY.ATLASMMORPG.COM</p>
-                    <p>1000 Players Online</p>
-                    <span class="dot"></span>
+
+                    <div class="play">
+                        <p class="play-text">PLAY.ATLASMMORPG.COM</p>
+                        <p class="online"><span class="player-count">1000</span> Players Online</p>
+                        <span class="dot"></span>
+                    </div>
                 </div>
             </div>
         </header>
