--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 
                     <div class="play">
                         <p class="play-text">PLAY.ATLASMMORPG.COM</p>
-                        <p class="online"><span class="player-count">1000</span> Players Online</p>
-                        <span class="dot"></span>
+                        <p class="online">
+                            <span class="player-count">1000</span> Players Online
+                            <span class="dot"></span>
+                        </p>
                     </div>
                 </div>
             </div>
