--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                     </ul>
                 </div>
 
+                <div class="logo">
+                    <img src="/images/ATLAS-LOGO.png" alt="ATLAS Logo">
+                </div>
+
                 <div class="bbx-container">
                     <div class="welcome-msg">
                         <h1>WELCOME TO ATLAS!</h1>
