--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="logo">
-                    <img src="/images/ATLAS-LOGO.png" alt="ATLAS Logo">
+                    <img src="images/ATLAS-LOGO.png" alt="ATLAS Logo">
                 </div>
 
                 <div class="bbx-container">
@@ -57,6 +57,23 @@
             </div>
         </header>
 
+        <div class="main-content">
+            <img src="images/background.png" alt="background">
+        </div>
+
+        <div class="update-form">
+            <div class="header-update"></div>
+            <div class="content-top"></div>
+            <div class="content-box">
+
+            </div>
+        </div>
+
+        <div class="sidebar">
+            <div class="shop-header">
+                <img src="images/shop-icon.png" alt="Shop Icon">
+            </div>
+        </div>
     </div>
 </body>
 </html>
