--- a/index.html
+++ b/index.html
@@ -62,10 +62,17 @@
         </div>
 
         <div class="update-form">
-            <div class="header-update"></div>
-            <div class="content-top"></div>
             <div class="content-box">
-
+                <div class="header-update"></div>
+                <div class="content-top"></div>
+                <div class="content"></div>
+            </div>
+            
+            <div class="sidebar">
+                <img src="images/shop-icon.png" alt="shop-icon">
+                <div class="shop-content">
+                    
+                </div>
             </div>
         </div>
     </div>
