--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
                 </div>
             </div>
         </div>
+
+        <div class="update-form2">
+            <div class="content-box">
+                <div class="header-update"></div>
+                <div class="content-top"></div>
+                <div class="content"></div>
+            </div>
+
+            <div class="content-box">
+                <div class="header-update"></div>
+                <div class="content-top"></div>
+                <div class="content"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
