--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="box-container">
                 <div class="navigation-bar">
                     <ul>
-                        <li><a href="#">HOME</a></li>
+                        <li><a href="index.html">HOME</a></li>
                         <li><a href="#">FORUM</a></li>
                         <li><a href="#">STORE</a></li>
                     </ul>
