--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="login-register">
                 <ul>
-                    <li><a class="login" href="#">LOGIN</a></li>
+                    <li><a class="login" href="LOGIN.html">LOGIN</a></li>
                     <li><a class="register" href="#">REGISTER</a></li>
                 </ul>
             </div>
