--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <header>
             <div class="login-register">
                 <ul>
-                    <li><a class="login" href="LOGIN.html">LOGIN</a></li>
-                    <li><a class="register" href="#">REGISTER</a></li>
+                    <li><a class="login" href="login.html">LOG IN</a></li>
+                    <li><a class="signup" href="signup.html">SIGN UP</a></li>
                 </ul>
             </div>
 
