--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <div class="navigation-bar">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="#">FORUM</a></li>
-                        <li><a href="#">STORE</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="store.html">STORE</a></li>
                     </ul>
                 </div>
 
