--- a/LOGIN.html
+++ b/LOGIN.html
@@ -25,7 +25,7 @@
                     <label for="chk" aria-hidden="true">Log In</label>
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="Password" name="pswd" placeholder="Password" required="">
-                    <button>Log in</button>
+                    <input type="submit" class="button" name="login" value="Log In">
                 </form>
             </div>
             <div class="signup">
@@ -34,7 +34,7 @@
                     <input type="text" name="txt" placeholder="User Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="password" name="pswd" placeholder="Password" required="">
-                    <button>Sign Up</button>
+                    <input type="submit" class="button" name="signup" value="Sign Up">
                 </form>
             </div>
     </div>
