--- a/LOGIN.html
+++ b/LOGIN.html
@@ -29,9 +29,9 @@
                 </form>
             </div>
             <div class="signup">
-                <form>
+                <form action="php/signlog.php" method="post">
                     <label for="chk" aria-hidden="true">Sign Up</label>
-                    <input type="text" name="txt" placeholder="User Name" required="">
+                    <input type="text" name="userName" placeholder="User Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="password" name="pswd" placeholder="Password" required="">
                     <input type="submit" class="button" name="signup" value="Sign Up">
