--- a/about.html
+++ b/about.html
@@ -111,18 +111,18 @@
                 <div class="developer-grid">
                     <div class="developer-card">
                         <img src="images/team-member1.jpg" alt="Team Member 1">
-                        <h3>Jane Doe</h3>
-                        <p>Lead Game Designer</p>
+                        <h3>Francis Gabriel Crame</h3>
+                        <p>Project Programmer</p>
                     </div>
                     <div class="developer-card">
                         <img src="images/team-member2.jpg" alt="Team Member 2">
-                        <h3>John Smith</h3>
-                        <p>Art Director</p>
+                        <h3>Rechell Anne Rodriguez</h3>
+                        <p>Project Documentation and Research</p>
                     </div>
                     <div class="developer-card">
                         <img src="images/team-member3.jpg" alt="Team Member 3">
-                        <h3>Mary Johnson</h3>
-                        <p>Lead Programmer</p>
+                        <h3>Cedric Gawala</h3>
+                        <p>Project Analyst</p>
                     </div>
                 </div>
             </section>
