--- a/LOGIN.html
+++ b/LOGIN.html
@@ -20,16 +20,16 @@
             <input type="checkbox" id="chk" aria-hidden="true">
 
             <div class="login">
-
-                <form>
+                <form action="login.php" method="post">
                     <label for="chk" aria-hidden="true">Log In</label>
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="Password" name="pswd" placeholder="Password" required="">
                     <input type="submit" class="button" name="login" value="Log In">
                 </form>
             </div>
+
             <div class="signup">
-                <form action="php/signlog.php" method="post">
+                <form action="php/signup.php" method="post">
                     <label for="chk" aria-hidden="true">Sign Up</label>
                     <input type="text" name="userName" placeholder="User Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
