--- a/LOGIN.html
+++ b/LOGIN.html
@@ -20,7 +20,7 @@
             <input type="checkbox" id="chk" aria-hidden="true">
 
             <div class="login">
-                <form action="login.php" method="post">
+                <form action="php/login.php" method="post">
                     <label for="chk" aria-hidden="true">Log In</label>
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="Password" name="pswd" placeholder="Password" required="">
