--- a/LOGIN.html
+++ b/LOGIN.html
@@ -20,7 +20,7 @@
             <input type="checkbox" id="chk" aria-hidden="true">
 
             <div class="login">
-                <form action="login.php" method="post">
+                <form action="php/login.php" method="post">
                     <label for="chk" aria-hidden="true">Log In</label>
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="Password" name="pswd" placeholder="Password" required="">
@@ -29,7 +29,7 @@
             </div>
 
             <div class="signup">
-                <form action="signup.php" method="post">
+                <form action="php/signup.php" method="post">
                     <label for="chk" aria-hidden="true">Sign Up</label>
                     <input type="text" name="userName" placeholder="User Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
