--- a/signup.html
+++ b/signup.html
@@ -20,21 +20,21 @@
             <input type="checkbox" id="chk" aria-hidden="true">
 
             <div class="signup">
-
-                <form>
-                    <label for="chk" aria-hidden="true">Sign up</label>
-                    <input type="text" name="txt" placeholder="User Name" required="">
-                    <input type="email" name="email" placeholder="Email" required="">
-                    <input type="Password" name="pswd" placeholder="Password" required="">
-                    <button>Sign up</button>
-                </form>
-            </div>
-            <div class="login">
-                <form>
-                    <label for="chk" aria-hidden="true">Log in</label>
+                <form action="php/signup.php" method="post">
+                    <label for="chk" aria-hidden="true">Sign Up</label>
+                    <input type="text" name="userName" placeholder="User Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="password" name="pswd" placeholder="Password" required="">
-                    <button>Log in</button>
+                    <input type="submit" class="button" name="signup" value="Sign Up">
+                </form>
+            </div>
+
+            <div class="login">
+                <form action="php/login.php" method="post">
+                    <label for="chk" aria-hidden="true">Log In</label>
+                    <input type="email" name="email" placeholder="Email" required="">
+                    <input type="Password" name="pswd" placeholder="Password" required="">
+                    <input type="submit" class="button" name="login" value="Log In">
                 </form>
             </div>
     </div>
