--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
                 <form action="php/login.php" method="post">
                     <label for="chk" aria-hidden="true">Log In</label>
                     <input type="email" name="email" placeholder="Email" required="">
-                    <input type="Password" name="pswd" placeholder="Password" required="">
+                    <input type="password" name="pswd" placeholder="Password" required="">
                     <input type="submit" class="button" name="login" value="Log In">
                 </form>
             </div>
