--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
                     <input type="text" name="userName" placeholder="User Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="password" name="pswd" placeholder="Password" required="">
-                    <input type="submit" class="button" name="signup" value="Sign Up">
+                    <input type="submit" class="btn" name="signup" value="Sign Up">
                 </form>
             </div>
 
@@ -34,7 +34,7 @@
                     <label for="chk" aria-hidden="true">Log In</label>
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="password" name="pswd" placeholder="Password" required="">
-                    <input type="submit" class="button" name="login" value="Log In">
+                    <input type="submit" class="btn" name="login" value="Log In">
                 </form>
             </div>
     </div>
