--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="login-register">
                 <ul>
                     <li><a class="login" href="LOGIN.html">LOG IN</a></li>
-                    <li><a class="signup" href="signup.html">SIGN UP</a></li>
+                    <li><a class="signup" href="SIGNUP.html">SIGN UP</a></li>
                 </ul>
             </div>
 
