--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="loginform.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -19,22 +19,22 @@
     <div class="main">
             <input type="checkbox" id="chk" aria-hidden="true">
 
-            <div class="signup">
+            <div class="login">
                 <form action="php/signup.php" method="post">
                     <label for="chk" aria-hidden="true">Sign Up</label>
                     <input type="text" name="userName" placeholder="User Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="password" name="pswd" placeholder="Password" required="">
-                    <input type="submit" class="btn" name="signup" value="Sign Up">
+                    <input type="submit" class="button" name="login" value="Sign Up">
                 </form>
             </div>
 
-            <div class="login">
+            <div class="signup">
                 <form action="php/login.php" method="post">
                     <label for="chk" aria-hidden="true">Log In</label>
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="password" name="pswd" placeholder="Password" required="">
-                    <input type="submit" class="btn" name="login" value="Log In">
+                    <input type="submit" class="button" name="signup" value="Log In">
                 </form>
             </div>
     </div>
