--- a/LOGIN.html
+++ b/LOGIN.html
@@ -34,6 +34,7 @@
                     <input type="text" name="userName" placeholder="User Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="password" name="pswd" placeholder="Password" required="">
+                    <input type="password" name="confirmation" placeholder="Confirm Password" required="">
                     <input type="submit" class="button" name="signup" value="Sign Up">
                 </form>
             </div>
