--- a/signup.html
+++ b/signup.html
@@ -25,6 +25,11 @@
                     <input type="text" name="userName" placeholder="User Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
                     <input type="password" name="pswd" placeholder="Password" required="">
+                    <input type="password" name="confirmation" placeholder="Confirm Password" required="">
+                    <select name="user_input" class="user_input" id="user_input">
+                        <option value="user">User</option>
+                        <option value="admin">Admin</option>
+                    </select>
                     <input type="submit" class="button" name="login" value="Sign Up">
                 </form>
             </div>
@@ -32,8 +37,12 @@
             <div class="signup">
                 <form action="php/login.php" method="post">
                     <label for="chk" aria-hidden="true">Log In</label>
-                    <input type="email" name="email" placeholder="Email" required="">
+                    <input type="email" class="email" name="email" placeholder="Email" required="">
                     <input type="password" name="pswd" placeholder="Password" required="">
+                    <select name="user_input" class="user_input" id="user_input">
+                        <option value="user">User</option>
+                        <option value="admin">Admin</option>
+                    </select>
                     <input type="submit" class="button" name="signup" value="Log In">
                 </form>
             </div>
