--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <header>
             <div class="login-register">
                 <ul>
-                    <li><a class="login" href="LOGIN.html">LOG IN</a></li>
-                    <li><a class="signup" href="SIGNUP.html">SIGN UP</a></li>
+                    <li><a class="login" href="login.php">LOG IN</a></li>
+                    <li><a class="signup" href="signup.php">SIGN UP</a></li>
                 </ul>
             </div>
 
