--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
         <div class="main-content">
             
         </div>
-
+            <div>
                 <div class="update-form" id="newsFeed">
                     <!-- News items will be added here dynamically -->
-                    </div>
                 </div>
             </div>
         </div>
