--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
         <div class="main-content">
             
         </div>
+        <iframe src="https://discord.com/widget?id=1312823529284046848&theme=dark" width="450" height="550" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" class="discord-css"></iframe>
+
             <div>
                 <div class="update-form" id="newsFeed">
                     <!-- News items will be added here dynamically -->
+                     
                 </div>
             </div>
         </div>
