--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
             </div>
         </div>
     </div>
-    <script src="fetch_news.js"></script>
+    <script src="js/fetch_news.js"></script>
 </body>
 </html>
