--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <ul>
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="about.html">ABOUT</a></li>
-                        <li><a href="addtocart.html">STORE</a></li>
+                        <li><a href="user/store.php">STORE</a></li>
                     </ul>
                 </div>
 
@@ -60,7 +60,7 @@
         <div class="main-content">
             
         </div>
-        <iframe src="https://discord.com/widget?id=1312823529284046848&theme=dark" width="450" height="550" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" class="discord-css"></iframe>
+        <iframe src="https://discord.com/widget?id=1286155422633562264&theme=dark" width="450" height="550" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" class="discord-css"></iframe>
 
             <div>
                 <div class="update-form" id="newsFeed">
