--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                     <ul>
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="about.html">ABOUT</a></li>
-                        <li><a href="store.html">STORE</a></li>
+                        <li><a href="user/store.php">STORE</a></li>
                     </ul>
                 </div>
 
